@@ -114,5 +114,9 @@ module Cucumber
     def file_colon_line
       @proc.file_colon_line
     end
+    
+    def file
+      @file ||= file_colon_line.split(':')[0]
+    end
   end
 end
